# voltron

./: .gitignore  README.md  create-icons.sh  entitlements.plist  package.json  pnpm-lock.yaml  start.sh  svelte.config.js  vite.config.ts
src/: app.css  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  terminal.rs
src/lib/components/: StatusPanel.svelte  Terminal.svelte
src/lib/stores/: terminals.ts
src/routes/: +page.svelte
